Adding Gemini route and update sending gmail
Gemini route in order to compare car
